--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <b>媳妇你别黑我..</b>
     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://music.163.com/outchain/player?type=2&id=356034&auto=1&height=66"></iframe>
-    <object archive="https://github.com/xjywp2008/test/blob/master/README.md"></object>
+    <object archive="https://github.com/xjywp2008/test/blob/master/test.html"></object>
   </body>
 </html>
 
