--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body>
+  <body background="image/1.png">
     <b>媳妇你别黑我..</b>
     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://music.163.com/outchain/player?type=2&id=356034&auto=1&height=66"></iframe>
-    <object archive="https://github.com/xjywp2008/test/blob/master/test.html"></object>
   </body>
 </html>
 
