--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
     <div class="hometown">
       <div class="heart">
       </div>
-      <div id="top">Made in</div>
-      <div class="city">Boise</div>
-      <div id="bottom">With love</div>
+      <div id="top">Love Is</div>
+      <div class="city">BOTTLE</div>
+      <div id="bottom">Beautiful</div>
     </div>
     </div>
     <div style="text-align:center;clear:both">
